Briefly list any changes you made to your graph class during hw-pathfinder, and why you made those changes.
