@@ -1,2 +1,3 @@
 Briefly list any changes you made to your graph class during hw-pathfinder, and why you made those changes.
+I did not make any changes to the graph class other than adding generics and appropriately adjusting the documentation.
 
